[package]
name = "glass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
egui_gui = ["egui-wgpu", "egui-winit", "egui"]
trace = ["wgpu/trace"]

[dependencies]
indexmap = "1.9.3"
pollster = "0.3.0"
image = "0.24"
bytemuck = { version = "1.13.1", features = ["derive"] }
wgpu = "0.16"
winit = "0.28"
glam = "0.24.0"

# Optional Egui
egui-wgpu = { version = "0.21", optional = true }
egui-winit = { version = "0.21", optional = true }
egui = { version = "0.21", optional = true }

[dev-dependencies]
egui_demo_lib = "0.21"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[package.metadata.example.hello_world]
name = "Hello World"
description = "A traditional hello world example"

[[example]]
name = "game_of_life"
path = "examples/game_of_life/main.rs"

[package.metadata.example.game_of_life]
name = "Game Of Life Compute Shader"
description = "Game of life running a compute shader"

[[example]]
name = "multiple_windows"
path = "examples/multiple_windows/main.rs"

[package.metadata.example.multiple_windows]
name = "Multiple Windows"
description = "Example that opens multiple windows on space key"

[[example]]
name = "quad"
path = "examples/quad/main.rs"

[package.metadata.example.quad]
name = "Quad"
description = "Example that renders a basic Quad"

[[example]]
name = "triangle"
path = "examples/triangle/main.rs"

[package.metadata.example.triangle]
name = "Triangle"
description = "Example that renders a basic Triangle"

[[example]]
name = "egui_gui"
path = "examples/egui_gui.rs"
required-features = ["egui_gui"]

[package.metadata.example.egui_gui]
name = "Egui Gui"
description = "Example that runs an egui demo app"
