[package]
name = "glass"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
egui_gui = ["egui-wgpu", "egui-winit", "egui"]
egui_extra = ["egui_gui", "egui_extras", "egui_plot"]
egui_demo = ["egui_gui", "egui_demo_lib", "egui_demo_lib/syntect"]
egui_persistence = ["egui_gui", "egui_demo", "egui/persistence", "egui_demo_lib/serde"]
trace = ["wgpu/trace"]

[dependencies]
indexmap = "2.2"
pollster = "0.3"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }
wgpu = { version = "0.19", default_features = true, features = ["naga-ir"] }
winit = { version = "0.29", features = ["rwh_05"] }
glam = "0.25"
path-clean = "1.0.1"
notify = "6.1"
flume = "0.11"
log = "0.4"

# Optional Egui
egui = { version = "0.27", optional = true }
egui-wgpu = { version = "0.27", optional = true }
egui-winit = { version = "0.27", optional = true }
egui_extras = { version = "0.27", optional = true }
egui_demo_lib = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }

[dev-dependencies]
egui_demo_lib = { version = "0.27"}
winit_input_helper = "0.15"
rapier2d = { version = "0.18", features = ["default", "debug-render"] }

[lints.clippy]
blocks_in_conditions = "allow"
field_reassign_with_default = "allow"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[package.metadata.example.hello_world]
name = "Hello World"
description = "A traditional hello world example"

[[example]]
name = "game_of_life"
path = "examples/game_of_life/main.rs"

[package.metadata.example.game_of_life]
name = "Game Of Life Compute Shader"
description = "Game of life running a compute shader"

[[example]]
name = "multiple_windows"
path = "examples/multiple_windows/main.rs"

[package.metadata.example.multiple_windows]
name = "Multiple Windows"
description = "Example that opens multiple windows on space key"

[[example]]
name = "quad"
path = "examples/quad/main.rs"

[package.metadata.example.quad]
name = "Quad"
description = "Example that renders a basic Quad"

[[example]]
name = "triangle"
path = "examples/triangle/main.rs"

[package.metadata.example.triangle]
name = "Triangle"
description = "Example that renders a basic Triangle"

[[example]]
name = "egui_gui"
path = "examples/egui_gui.rs"
required-features = ["egui_gui", "egui_demo"]

[package.metadata.example.egui_gui]
name = "Egui Gui"
description = "Example that runs an egui demo app"

[[example]]
name = "fluid_sim"
path = "examples/fluid_sim/main.rs"
required-features = ["egui_gui"]

[package.metadata.example.fluid_sim]
name = "Fluid Sim"
description = "Example that runs a fluid simulation using glass"

[[example]]
name = "lines"
path = "examples/lines.rs"
required-features = []

[package.metadata.example.lines]
name = "Line Draw"
description = "Example that draws lines"
